--- a/css/styles.css
+++ b/css/styles.css
@@ -1,185 +1,338 @@
 /* Base */
 body {
-  background-color: #fff;
-  font-family: "Roboto", sans-serif;
-  color: #434455;
+    background-color: #fff;
+    font-family: 'Roboto', sans-serif;
+    color: #434455;
 }
 a {
-  text-decoration: none;
+    text-decoration: none;
 }
 ul,
 ol {
-  list-style: none;
+    list-style: none;
 }
-button {cursor: pointer;}
+button {
+    cursor: pointer;
+}
+img {
+    display: block;
+    max-width: 100%;
+}
 
+.page-container {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+main {
+    flex-grow: 1;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+ol,
+ul {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+}
+.container {
+    max-width: 1158px;
+    padding-left: auto;
+    padding-right: auto;
+    margin-left: auto;
+    margin-right: auto;
+}
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
 /* header */
+
 .page-header {
-  background-color: #fff;
+    background-color: #fff;
+    padding: 24px 0;
+}
+.nav-conteiner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.page-nav {
+    display: flex;
 }
 .logo-accent {
-  color: #2e2f42;
-  font-family: "Raleway", sans-serif;
-  font-size: 18px;
-  line-height: 1.17;
-  letter-spacing: 0.03em
+    color: #2e2f42;
+    font-family: 'Raleway', sans-serif;
+    font-size: 18px;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    margin-right: 76px;
 }
-
+.menu {
+    display: flex;
+    align-items: flex-start;
+    gap: 40px;
+    padding: 0px 24px;
+}
 .nav-logo {
-  color: #4d5ae5;
-  font-family: "Raleway", sans-serif;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
+    color: #4d5ae5;
+    font-family: 'Raleway', sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
 }
 
 .nav-link {
-  color: #2e2f42;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+    color: #2e2f42;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 .nav-link:hover,
 .nav-link:active,
 .nav-link:focus {
-  color: #404bbf;
+    color: #404bbf;
 }
-.adress-item {font-style: normal}
+
+.adress-item {
+    font-style: normal;
+}
 
 .adress-link {
-  color: #434455;
-  font-style: normal;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+    color: #434455;
+    font-style: normal;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 
 .adress-link:hover,
 .adress-link:active,
 .adress-link:focus {
-  color: #404bbf;
+    color: #404bbf;
 }
-.page-adress {font-style: normal;}
+.page-adress {
+    font-style: normal;
+}
 /* Hero section */
 .hero-section {
-  background-color: #2e2f42;
+    height: 600px;
+    flex-shrink: 0;
+    background-color: #2e2f42;
+    padding-top: 188px;
+    padding-bottom: 60px;
+}
+.hero-container {
+    margin-bottom: 48px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+    gap: 40px;
 }
 .hero-text {
-  color: #fff;
-  text-align: center;
-  font-size: 56px;
-  font-weight: 700;
-  line-height: 1.07;
-  letter-spacing: 0.02em;
+    color: #fff;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 48px;
+    text-align: center;
+    font-size: 56px;
+    font-weight: 700;
+    line-height: 1.07;
+    letter-spacing: 0.02em;
+    max-width: 496px;
 }
 .hero-btn {
-  background-color: #4d5ae5;
-  color: #fff;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.04em;
+    background-color: #4d5ae5;
+    color: #fff;
+    font-weight: 500px;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    display: block;
+    padding: 16px 32px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 4px;
+    background: var(--IRIS, #4d5ae5);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 .hero-btn:hover,
- .hero-btn:focus
- {
-  background-color: #404BBF
+.hero-btn:focus {
+    background-color: #404bbf;
 }
 /* Advantages */
 .advantages {
-  background-color: #fff;
+    background-color: #fff;
+    margin-bottom: 120px;
+    margin-top: 120px;
+}
+.advantages-list {
+    display: flex;
+    gap: 24px;
+}
+.adv-item {
+    width: calc((100%-3 * 24px) / 4);
 }
 
 .adv-title {
-  color: #2e2f42;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
+    color: #2e2f42;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    margin-bottom: 8px;
 }
 
 .adv-text {
-  color: #434455;
-  line-height: 24px;
-  letter-spacing: 0.02em;
+    color: #434455;
+    line-height: 24px;
+    letter-spacing: 0.02em;
 }
 
 /* Team */
 .team {
-  background-color: #f4f4fd;
+    padding-top: 120px;
+    padding-bottom: 120px;
+    background-color: #f4f4fd;
+}
+.team-lists {
+    display: flex;
+    gap: 24px;
+    justify-content: center;
+    flex-wrap: wrap;
 }
 .team-item {
-  background-color: #FFFFFF;  
+    background-color: #ffffff;
+    text-align: center;
+    width: calc((100%-3 * 24) / 4);
 }
-
+.team-item img {
+    margin-bottom: 32px;
+}
+.team-item h3 {
+    margin-bottom: 8px;
+}
+.team-item p {
+    margin-bottom: 32px;
+}
 .team-title {
-  color: #2e2f42;
-  font-size: 36px;
-  text-align: center;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
+    color: #2e2f42;
+    font-size: 36px;
+    text-align: center;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    margin-bottom: 72px;
 }
 
 .team-name {
-  color: #2e2f42;
-  background-color: #FFFFFF;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
+    color: #2e2f42;
+    background-color: #ffffff;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
 }
 
 .team-text {
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: #434455;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #434455;
 }
 /* Portfolio */
 .portfolio {
-  background-color: #fff;
+    justify-content: center;
+    background-color: #fff;
 }
-
+.portfolio-container {
+    padding: 120px 0;
+}
 .portfolio-title {
-  font-size: 36px;
-  text-align: center;
-  font-weight: 700;
-  line-height: 1.11;
-  letter-spacing: 0.02em;
-  text-transform: capitalize;
+    font-size: 36px;
+    text-align: center;
+    font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+    margin-bottom: 72px;
 }
-
+.card-set {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 48px;
+    column-gap: 24px;
+    justify-content: center;
+}
+.portfolio-item {
+    flex-basis: calc((100% - 2 * 24) / 3);
+    border: 1px solid var(--CORNFLOWER, #e7e9fc);
+}
+.portfolio-item img {
+    margin-bottom: 32px;
+}
+.portfolio-item h3 {
+    margin-bottom: 8 px;
+    padding-left: 16px;
+}
+.portfolio-item p {
+    margin-bottom: 32px;
+    padding-left: 16px;
+}
 .item-title {
-  color: #2e2f42;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
+    color: #2e2f42;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
 }
 
 .portfolio-text {
-  color: #434455;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
+    color: #434455;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
 }
 /* Footer */
 .page-footer {
-  background-color: #2e2f42;
+    padding-top: 101.5px;
+    flex-shrink: 0;
+    background-color: #2e2f42;
+}
+.nav-logo {
 }
 .logo-footer {
-  color: #F4F4FD;
-  font-family: "Raleway", sans-serif;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 1.17;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
+    color: #f4f4fd;
+    font-family: 'Raleway', sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
 }
 .footer-text {
-  color: #f4f4fd;
-  line-height: 1.5;
-  letter-spacing: 0.02em
+    color: #f4f4fd;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    margin-top: 17.5px;
+    max-width: 264px;
+    padding-bottom: 100px;
 }
