--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,7 @@ ul {
 .page-header {
     background-color: #fff;
     border-bottom: 1px solid #e7e9fc;
+    padding: 24px 0 24px;
 }
 .nav-conteiner {
     display: flex;
@@ -90,8 +91,7 @@ ul {
     display: flex;
     align-items: flex-start;
     gap: 40px;
-    padding-top: 24px;
-    padding-bottom: 24px;
+    padding: 24px 0;
 }
 .nav-logo {
     color: #4d5ae5;
@@ -187,8 +187,7 @@ ul {
 /* Advantages */
 .advantages {
     background-color: #fff;
-    margin-bottom: 120px;
-    margin-top: 120px;
+    padding: 120px 0;
 }
 .advantages-list {
     display: flex;
@@ -225,10 +224,14 @@ ul {
     justify-content: center;
     flex-wrap: wrap;
 }
+.team-person {
+    padding: 32px 0;
+}
 .team-item {
     background-color: #ffffff;
     text-align: center;
-    width: calc((100%-3 * 24) / 4);
+    width: calc((100% - 72px) / 4);
+    border-radius: 0px 0px 4px 4px;
 }
 .team-item img {
     margin-bottom: 32px;
@@ -258,12 +261,15 @@ ul {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    text-align: center;
+    margin-bottom: 8px;
 }
 
 .team-text {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
+    text-align: center;
 }
 /* Portfolio */
 .portfolio {
@@ -290,7 +296,12 @@ ul {
 }
 .portfolio-item {
     flex-basis: calc((100% - 48px) / 3);
-    border: 1px solid var(--CORNFLOWER, #e7e9fc);
+}
+.app-container {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+    margin-bottom: 8px;
 }
 .portfolio-item img {
     margin-bottom: 32px;
