--- a/css/styles.css
+++ b/css/styles.css
@@ -82,14 +82,13 @@ ul {
     font-size: 18px;
     line-height: 1.17;
     letter-spacing: 0.03em;
-    margin-right: 76px;
 }
 .menu {
     display: flex;
     align-items: flex-start;
     gap: 40px;
 }
-.nav-logo {
+.nav-logo-header {
     color: #4d5ae5;
     font-family: 'Raleway', sans-serif;
     font-size: 18px;
@@ -98,6 +97,7 @@ ul {
     letter-spacing: 0.03em;
     text-transform: uppercase;
     margin-right: 76px;
+    padding: 24px 0;
 }
 
 .nav-link {
@@ -131,6 +131,7 @@ ul {
 }
 .page-adress {
     font-style: normal;
+    padding: 24px 0;
 }
 /* Hero section */
 .hero-section {
@@ -140,7 +141,6 @@ ul {
     padding: 188px 0;
 }
 .hero-container {
-    margin-bottom: 48px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -191,7 +191,7 @@ ul {
     gap: 24px;
 }
 .adv-item {
-    width: calc((100%-3 * 24px) / 4);
+    width: calc((100% - 72px) / 4);
 }
 
 .adv-title {
@@ -230,15 +230,11 @@ ul {
     width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
 }
-.team-item img {
-    margin-bottom: 32px;
-}
+
 .team-item h3 {
     margin-bottom: 8px;
 }
-.team-item p {
-    margin-bottom: 32px;
-}
+
 .team-title {
     color: #2e2f42;
     font-size: 36px;
@@ -298,19 +294,12 @@ ul {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
-    margin-bottom: 8px;
 }
-.portfolio-item img {
-    margin-bottom: 32px;
-}
+
 .portfolio-item h3 {
     margin-bottom: 8px;
-    padding-left: 16px;
 }
-.portfolio-item p {
-    margin-bottom: 32px;
-    padding-left: 16px;
-}
+
 .item-title {
     color: #2e2f42;
     font-size: 20px;
@@ -335,6 +324,15 @@ ul {
     display: inline-block;
     margin-bottom: 16px;
 }
+.nav-logo-footer {
+    color: #4d5ae5;
+    font-family: 'Raleway', sans-serif;
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+}
 .logo-footer {
     color: #f4f4fd;
     font-family: 'Raleway', sans-serif;
@@ -350,5 +348,4 @@ ul {
     letter-spacing: 0.02em;
     margin-top: 17.5px;
     max-width: 264px;
-    padding-bottom: 100px;
 }
